<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/image1"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:scaleType="centerCrop"
                android:src="@drawable/tools"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout style="@style/ItemHolder">
                    <TextView
                        android:text="@string/languages_label"
                        style="@style/ItemHeader" />
                    <View style="@style/ItemDivider" />

                    <TextView
                        android:text="@string/languages"
                        style="@style/ItemContent" />

                    <TextView
                        android:text="@string/operating_systems_label"
                        style="@style/ItemHeader"/>

                    <View style="@style/ItemDivider" />

                    <TextView
                        android:text="@string/operating_systems"
                        style="@style/ItemContent" />

                    <TextView
                        android:text="@string/ide_and_tools_label"
                        style="@style/ItemHeader"/>

                    <View style="@style/ItemDivider" />

                    <TextView
                        android:text="@string/ide_and_tools"
                        style="@style/ItemContent" />

                    <TextView
                        android:text="@string/version_control_label"
                        style="@style/ItemHeader"/>

                    <View style="@style/ItemDivider" />

                    <TextView
                        android:text="@string/version_control"
                        style="@style/ItemContent" />

                    <TextView
                        android:text="@string/bug_tracking_label"
                        style="@style/ItemHeader"/>

                    <View style="@style/ItemDivider" />

                    <TextView
                        android:text="@string/bug_tracking"
                        style="@style/ItemContent" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>

