<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/surface"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="100dp">
    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout style="@style/ItemHolder" >

                    <TextView
                        android:text="@string/programming"
                        style="@style/ItemHeader"
                        />

                    <View style="@style/ItemDivider" />

                    <TextView
                        android:text="@string/programming_description"
                        style="@style/ItemContent"
                        android:autoLink="web"/>

                    <TextView
                            android:text="@string/hardware"
                            style="@style/ItemHeader"
                            />

                    <View style="@style/ItemDivider" />

                    <TextView
                        android:text="@string/hardware_description"
                        style="@style/ItemContent" />

                    <TextView
                            android:text="@string/music"
                            style="@style/ItemHeader"
                            />

                    <View style="@style/ItemDivider" />

                    <TextView
                        android:text="@string/music_description"
                        style="@style/ItemContent" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>

